# MNN-MTCNN

./: README.md
android-mnn/app/: CMakeLists.txt  build.gradle
android-mnn/app/includes/MNN/cpp/: Config.cpp
android-mnn/app/src/main/: AndroidManifest.xml
android-mnn/app/src/main/java/cn/sample/mnn/detect/: TestFaceDetectActivity.java
android-mnn/app/src/main/jni/: CMakeLists.txt  face_detect.cpp  face_detect.h  facedetect_jni.cpp
android-mnn/app/src/main/res/layout/: activity_test_face.xml
